Adds error handling changes for the date input

--- a/src/main/resources/templates/fragments/form.html
+++ b/src/main/resources/templates/fragments/form.html
@@ -3,6 +3,7 @@
       th:action="@{${action}}"
       th:enctype="${enctype}"
       th:id="${formId}"
+      novalidate="true"
       autocomplete="off"
       method="post">
   <th:block th:replace="${content}"/>
