Updating for subflow and navigation

--- a/src/test/resources/templates/conditionsTestFlow/skipFirst.html
+++ b/src/test/resources/templates/conditionsTestFlow/skipFirst.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head :: head(title='Third conditional screen')}"></head>
+<head th:replace="~{fragments/head :: head(title='Skip first')}"></head>
 <body>
 <div class="page-wrapper">
   <div th:replace="~{fragments/toolbar :: toolbar}"></div>
