--- a/src/test/resources/templates/testFlow/inputs.html
+++ b/src/test/resources/templates/testFlow/inputs.html
@@ -50,7 +50,7 @@
                   <th:block
                       th:replace="~{fragments/inputs/radio :: radio(inputName='radioInput',value='Radio B', label='Radio B')}"/>
                   <th:block
-                      th:replace="~{fragments/inputs/radio :: radio(inputName='radioInput',value='Radio C', label='Radio C')}"/>
+                      th:replace="~{fragments/inputs/radio :: radio(inputName='radioInput',value='Radio C', radioHelpText='Radio C')}"/>
                 </th:block>
               </th:block>
               <th:block
