--- a/src/main/resources/templates/fragments/inputs/radio.html
+++ b/src/main/resources/templates/fragments/inputs/radio.html
@@ -23,6 +23,6 @@
     <p th:if="${hasHelpText}"
        th:id="${inputName} + '-' + ${value} + '-help-text'"
        th:utext="${radioHelpText}"
-       class="text--help" style="margin-bottom: 0px"></p>
+       class="text--help with-no-padding"></p>
   </label>
 </th:block>
