Update radio input to show required attribute in fieldset

--- a/src/main/resources/templates/fragments/inputs/radio.html
+++ b/src/main/resources/templates/fragments/inputs/radio.html
@@ -18,6 +18,7 @@
            th:aria-disabled="${disabled}"
            th:attr="
             aria-invalid=${hasError},
+            aria-required=${isRequiredInput},
             data-follow-up=${followUpId}">
     <span th:text="${label}"></span>
     <p th:if="${hasHelpText}"
