--- a/src/main/resources/templates/fragments/inputs/radioFieldset.html
+++ b/src/main/resources/templates/fragments/inputs/radioFieldset.html
@@ -4,6 +4,7 @@
       hasHelpText=${!#strings.isEmpty(fieldsetHelpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
+      isRequiredInput=${requiredInputs.contains(inputName)},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
@@ -19,16 +20,17 @@
       <legend class="form-question"
               th:id="${inputName + '-legend'}"
               th:inline="text">
-        [[${label}]]
+        <span th:text="${label}"></span>
+        <span th:if="${isRequiredInput}" class="required-input" aria-hidden="true">*</span>
         <p class="text--help spacing-below-0 text--normal"
            th:if="${hasHelpText}"
            th:id="${inputName + '-help-text'}"
            th:text="${fieldsetHelpText}"></p>
+        <th:block
+            th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
       </legend>
       <input type="hidden" th:id="${inputName} + 'Hidden'" th:name="${inputName}" value="">
       <th:block th:replace="${content}"/>
     </fieldset>
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
   </div>
 </th:block>
