--- a/src/main/resources/templates/fragments/inputs/money.html
+++ b/src/main/resources/templates/fragments/inputs/money.html
@@ -20,6 +20,7 @@
        th:id="${inputName + '-help-text'}"
        th:text="${helpText}"></p>
     <th:block
+        th:if="${hasError}"
         th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     <div class="text-input-group form-width--med">
       <div class="text-input-group__prefix">$</div>
