--- a/src/main/resources/templates/fragments/inputs/ssn.html
+++ b/src/main/resources/templates/fragments/inputs/ssn.html
@@ -20,8 +20,7 @@
        th:id="${inputName + '-help-text'}"
        th:text="${helpText}"></p>
     <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
-    <th:block
+        th:if="${hasError}"
         th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     <input type="text" class="text-input form-width--med ssn-input"
            th:id="${inputName}"
