--- a/src/main/resources/templates/fragments/inputs/text.html
+++ b/src/main/resources/templates/fragments/inputs/text.html
@@ -20,6 +20,7 @@
        th:id="${inputName + '-help-text'}"
        th:text="${helpText}"></p>
     <th:block
+        th:if="${hasError}"
         th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     <input type="text" class="text-input"
            th:id="${inputName}"
