--- a/src/main/resources/templates/fragments/inputs/number.html
+++ b/src/main/resources/templates/fragments/inputs/number.html
@@ -6,7 +6,7 @@
       hasPattern=${!#strings.isEmpty(pattern)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
-      isRequiredInput=${requiredInputs.contains(inputName)},
+      isRequiredInput=${requiredInputs.getOrDefault(inputName, false)},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
