--- a/src/main/resources/templates/fragments/screens/screenWithOneInput.html
+++ b/src/main/resources/templates/fragments/screens/screenWithOneInput.html
@@ -21,7 +21,8 @@
           <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _"/>
           <th:block th:replace="${hasIconFragment} ? ${iconFragment} : _"/>
           <th:block
-              th:replace="~{fragments/cardHeader :: cardHeader(header=${header}, subtext=${subtext})}"/>
+              th:replace="~{fragments/cardHeaderForSingleInputScreen :: 
+              cardHeaderForSingleInputScreen(header=${header}, subtext=${subtext}, inputName=${inputName})}"/>
           <th:block
               th:replace="~{fragments/form :: form(action=${formAction}, content=~{::formContent})}">
             <th:block th:ref="formContent">
