Adding iconFragment to screens since there might be multiple icons files in other SNE apps
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/main/resources/templates/fragments/screens/screenWithOneInput.html
+++ b/src/main/resources/templates/fragments/screens/screenWithOneInput.html
@@ -1,7 +1,8 @@
 <th:block
     th:fragment="screenWithOneInput"
     th:with="
-      hasIconName=${!#strings.isEmpty(iconName)}"
+      hasIconName=${!#strings.isEmpty(iconName)},
+      hasIconFragment=${!#strings.isEmpty(iconFragment)}"
     th:assert="
       ${!#strings.isEmpty(title)},
       ${!#strings.isEmpty(header)},
@@ -17,7 +18,8 @@
       <div class="grid">
         <div th:replace="~{fragments/goBack :: goBackLink}"></div>
         <main id="content" role="main" class="form-card spacing-above-35">
-          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _" />
+          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _"/>
+          <th:block th:replace="${hasIconFragment} ? ${iconFragment} : _"/>
           <th:block
               th:replace="~{fragments/cardHeader :: cardHeader(header=${header}, subtext=${subtext})}"/>
           <th:block
