--- a/src/main/resources/templates/fragments/screens/screenWithYesAndNoButtons.html
+++ b/src/main/resources/templates/fragments/screens/screenWithYesAndNoButtons.html
@@ -3,8 +3,8 @@
     th:with="
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasAriaDescribe=${!#strings.isEmpty(ariaDescribe)},
-      hasIconName=${!#strings.isEmpty(iconName)},
-      hasIconFragment=${!#strings.isEmpty(iconFragment)}"
+      hasIconFragment=${!#strings.isEmpty(iconFragment)},
+      hasIconName=${!#strings.isEmpty(iconName)}"
     th:assert="
       ${!#strings.isEmpty(title)},
       ${!#strings.isEmpty(header)},
@@ -22,7 +22,7 @@
         <div th:replace="~{fragments/goBack :: goBackLink}"></div>
         <main id="content" role="main" class="form-card spacing-above-35">
           <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _"/>
-          <th:block th:replace="${hasIconFragment} ? ${iconFragment} : _" />
+          <th:block th:replace="${hasIconFragment} ? ${iconFragment} : _"/>
           <th:block
               th:replace="~{fragments/cardHeader :: cardHeader(header=${header})}"/>
           <th:block
