--- a/src/main/resources/templates/fragments/screens/screenWithOneInput.html
+++ b/src/main/resources/templates/fragments/screens/screenWithOneInput.html
@@ -1,6 +1,7 @@
 <th:block
     th:fragment="screenWithOneInput"
     th:with="
+      hasIconFragment=${!#strings.isEmpty(iconFragment)},
       hasIconName=${!#strings.isEmpty(iconName)}"
     th:assert="
       ${!#strings.isEmpty(title)},
@@ -17,7 +18,8 @@
       <div class="grid">
         <div th:replace="~{fragments/goBack :: goBackLink}"></div>
         <main id="content" role="main" class="form-card spacing-above-35">
-          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _" />
+          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _"/>
+          <th:block th:replace="${hasIconFragment} ? ${iconFragment} : _"/>
           <th:block
               th:replace="~{fragments/cardHeader :: cardHeader(header=${header}, subtext=${subtext})}"/>
           <th:block
