--- a/src/main/resources/templates/fragments/inputs/radioFieldset.html
+++ b/src/main/resources/templates/fragments/inputs/radioFieldset.html
@@ -4,6 +4,8 @@
       hasHelpText=${!#strings.isEmpty(fieldsetHelpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
+      hasOptions=${options != null},
+      hasContent=${!hasOptions},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
@@ -11,7 +13,7 @@
     th:assert="
       ${!#strings.isEmpty(inputName)},
       ${hasLabel || hasAriaLabel},
-      ${content != null}">
+      ${hasContent || hasOptions}">
   <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
     <fieldset th:attr="
       aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
@@ -26,7 +28,18 @@
            th:text="${fieldsetHelpText}"></p>
       </legend>
       <input type="hidden" th:id="${inputName} + 'Hidden'" th:name="${inputName}" value="">
-      <th:block th:replace="${content}"/>
+      <th:block th:if="${hasContent}">
+        <th:block th:replace="${content}"/>
+      </th:block>
+      <th:block th:if="${hasOptions}">
+        <th:block th:each="option : ${options}">
+          <th:block th:replace="~{fragments/inputs/radio ::
+            radio(inputName=${inputName},
+              value=${option.getValue()},
+              label=${#strings.isEmpty(option.getLabel()) ? null : #messages.msg(option.getLabel())},
+              radioHelpText=${#strings.isEmpty(option.getHelpText()) ? null : #messages.msg(option.getHelpText())})}"/>
+        </th:block>
+      </th:block>
     </fieldset>
     <th:block
         th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
