--- a/src/main/resources/templates/fragments/inputs/checkboxFieldset.html
+++ b/src/main/resources/templates/fragments/inputs/checkboxFieldset.html
@@ -6,6 +6,7 @@
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
       hasOptions=${options != null},
       hasContent=${!hasOptions},
+      hasNoneOfTheAboveOption=${!#strings.isEmpty(noneOfTheAboveLabel)},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
@@ -40,6 +41,9 @@
               label=${#strings.isEmpty(option.getLabel()) ? null : #messages.msg(option.getLabel())},
               checkboxHelpText=${#strings.isEmpty(option.getHelpText()) ? null : #messages.msg(option.getHelpText())})}"/>
         </th:block>
+        <th:block th:if="${hasNoneOfTheAboveOption}"
+                  th:replace="~{fragments/inputs/checkboxInSet ::
+                    checkboxInSet(inputName=${inputName}, label=${noneOfTheAboveLabel}, noneOfTheAbove=true)}"/>
       </th:block>
       <th:block
           th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
