--- a/src/main/resources/templates/fragments/inputError.html
+++ b/src/main/resources/templates/fragments/inputError.html
@@ -1,6 +1,6 @@
 <p th:if="${null != errorMessages}" th:fragment="validationError(inputName)" class="text--error"
    th:assert="${!#strings.isEmpty(inputName)}"
-   th:aria-label="#{error.error}"
+   th:title="#{error.error}"
    th:id="${inputName} + '-error-p'">
   <th:block th:each="error, iter: ${errorMessages.get(inputName)}">
     <i class="icon-warning" th:id="${inputName + '-error-icon'} + ${iter.index + 1}"></i>
