--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -17,4 +17,5 @@
   <script src="/webjars/form-flow/0.0.1/js/formFlowLanguageSelector.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowDisableMultipleFormSubmit.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowFollowUpQuestion.js"></script>
+  <script src="/webjars/form-flow/0.0.1/js/formFlowHideField.js"></script>
 </th:block>
