--- a/src/main/resources/templates/fragments/inputs/checkboxInSet.html
+++ b/src/main/resources/templates/fragments/inputs/checkboxInSet.html
@@ -20,7 +20,8 @@
            th:checked="${checked}"
            th:attr="
             aria-invalid=${hasError},
-            data-follow-up=${followUpId}">
+            data-follow-up=${followUpId},
+            onchange=|toggleVisibility(this, '${toggleVisibility}');|">
     <div th:if="${hasIcon}">
       <i th:class="${'icon-' + checkboxIcon}" style="margin-right: 0.5rem"></i>
     </div>
