new toggleVisibility for checkbox

--- a/src/main/resources/templates/fragments/inputs/checkbox.html
+++ b/src/main/resources/templates/fragments/inputs/checkbox.html
@@ -26,7 +26,7 @@
              th:attr="
               aria-invalid=${hasError},
               data-follow-up=${followUpId},
-              sonchange=|toggleVisibility(this, '${toggleVisibility}');|">
+              onchange=|toggleVisibility(this, '${toggleVisibility}');|">
       <div th:if="${hasIcon}">
         <i th:class="${'icon-' + checkboxIcon}" style="margin-right: 0.5rem"></i>
       </div>
