--- a/src/main/resources/templates/fragments/inputs/date.html
+++ b/src/main/resources/templates/fragments/inputs/date.html
@@ -3,24 +3,14 @@
     th:with="
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
-      hasErrorMonth=${
-        errorMessages != null &&
-        errorMessages.get(inputName + 'Month') != null &&
-        #arrays.length(errorMessages.get(inputName + 'Month')) > 0 },
-      hasErrorDay=${
-        errorMessages != null &&
-        errorMessages.get(inputName + 'Day') != null &&
-        #arrays.length(errorMessages.get(inputName + 'Day')) > 0 },
-      hasErrorYear=${
-        errorMessages != null &&
-        errorMessages.get(inputName + 'Year') != null &&
-        #arrays.length(errorMessages.get(inputName + 'Year')) > 0 }"
+      hasErrorMonth=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Month'))},
+      hasErrorDay=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Day'))},
+      hasErrorYear=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Year'))},
+      hasErrorGroup=${hasErrorYear || hasErrorMonth || hasErrorDay || (errorMessages != null && !#arrays.isEmpty(errorMessages.get(groupName)))}"
     th:assert="${hasLabel || hasAriaLabel}">
-  <div
-      th:class="'form-group' + ${((hasErrorMonth || hasErrorDay || hasErrorYear) ? ' form-group--error' : '')}">
+  <div th:class="'form-group' + ${hasErrorGroup ? ' form-group--error' : ''}">
     <fieldset th:id="${groupName}" class="input-group input-group--inline">
-      <legend th:if="${hasLabel}" th:for="${inputName}" th:text="${label}"
-             class="form-question"/>
+      <legend th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
       <p class="text--help">
         <label th:for="${inputName}+'-month'"
                th:id="${inputName}+'-month-label'"
@@ -67,13 +57,13 @@
               aria-invalid=${hasErrorYear}"
              th:value="${fieldData.getOrDefault(inputName + 'Year', '')}"/>
     </fieldset>
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Month')}"></th:block>
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Day')}"></th:block>
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Year')}"></th:block>
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${groupName})}"></th:block>
+    <th:block th:if="${hasErrorMonth}"
+              th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Month')}"></th:block>
+    <th:block th:if="${hasErrorDay}"
+              th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Day')}"></th:block>
+    <th:block th:if="${hasErrorYear}"
+              th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Year')}"></th:block>
+    <th:block th:if="${hasErrorGroup}"
+              th:replace="~{fragments/inputError :: validationError(inputName=${groupName})}"></th:block>
   </div>
 </th:block>
