Change go back < to icon and add nav
- Label the nav as secondary

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -731,3 +731,13 @@ body,
     display: block;
   }
 }
+
+.underline {
+  text-decoration: underline;
+}
+
+.go-back-link {
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+}
