--- a/src/main/resources/templates/fragments/inputs/radioFieldset.html
+++ b/src/main/resources/templates/fragments/inputs/radioFieldset.html
@@ -22,7 +22,7 @@
               th:id="${inputName + '-legend'}"
               th:inline="text">
         <span th:text="${label}"></span>
-        <span th:if="${isRequiredInput && !hasAriaLabel}" class="required-input" aria-hidden="true">*</span>
+        <span th:if="${isRequiredInput && !hasAriaLabel}" class="required-input" th:text="#{general.required-field}"></span>
         <p class="text--help spacing-below-0 text--normal"
            th:if="${hasHelpText}"
            th:id="${inputName + '-help-text'}"
