--- a/src/main/resources/templates/fragments/inputs/text.html
+++ b/src/main/resources/templates/fragments/inputs/text.html
@@ -13,7 +13,7 @@
   <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
     <label th:if="${hasLabel}" th:for="${inputName}" class="form-question">
       <span th:text="${label}"></span>
-      <span th:if="${isRequiredInput  && !hasAriaLabel}" class="required-input" aria-hidden="true">*</span>
+      <span th:if="${isRequiredInput  && !hasAriaLabel}" class="required-input" th:text="#{general.required-field}"></span>
     </label>
     <p class="text--help"
        th:if="${hasHelpText}"
